syntax = "proto3";
package celestia.signal.v1;

option go_package = "github.com/celestiaorg/celestia-app/x/signal/types";

// Upgrade is a type that represents a network upgrade.
message Upgrade {
    // AppVersion is the version that has received a quorum of validators to
	// signal for it. It is set to 0 if no version has reached quorum.
	uint64 app_version = 1;

	// UpgradeHeight is the height at which the network should upgrade to the
	// AppVersion. It is set to 0 if no version has reached quorum.
	int64 upgrade_height = 2;
}
